--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404</title>
-</head>
+<%- include('template/cabecera.ejs') %>
 <body>
     <h1>404</h1>
 </body>
