--- a/views/dinosaurio.ejs
+++ b/views/dinosaurio.ejs
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dinosaurio</title>
-</head>
+<%- include('template/cabecera.ejs') %>
 <body>
-    <h1><%= title %></h1>
+    <h1><%= text %></h1>
 </body>
 </html>
