--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,8 @@
     <div class="cuaderno">
         <div class="nota">
             <ul>
-                <li class="elemento1">Nombre: <%= nombre %></li>
-                <li class="elemento2">Apellido: <%= apellido %></li>
+                <li class="elemento1">Nombres: <%= nombres %></li>
+                <li class="elemento2">Apellidos: <%= apellidos %></li>
                 <li class="elemento3">CI: <%= ci %></li>
                 <li class="elemento4">Seccion: <%= seccion %></li>
             </ul>
