--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,4 @@
 <%- include('template/cabecera.ejs') %>
-<body>
     <h1><%= text %></h1>
 
     <div class="cuaderno">
@@ -12,7 +11,7 @@
             </ul>
         </div>
 
-        <img src="./images/bookIcon.png" alt="TS">
+        <img class="bookLogo" src="./images/bookIcon.png" alt="TS">
     </div>
 </body>
 </html>
