--- a/views/template/cabecera.ejs
+++ b/views/template/cabecera.ejs
@@ -6,3 +6,15 @@
     <title><%= title %></title>
     <link rel="stylesheet" href="./stylesheets/style.css">
 </head>
+<body>
+    <header>
+        <div class="logo">
+            <img class="logoImg" src="./images/plushy.png" alt="icono de la pagina">
+            <a href="./"><h3>DinoAplicacion</h3></a>
+        </div>
+
+        <nav>
+            <a href="./dinosaurio">Dinosaurio</a>
+            <a href="./inexistente">404</a>
+        </nav>
+    </header>
