--- a/views/dinosaurio.ejs
+++ b/views/dinosaurio.ejs
@@ -1,5 +1,6 @@
 <%- include('template/cabecera.ejs') %>
 <body>
     <h1><%= text %></h1>
+    <div class="mandarina"><img class="mandarinaIMG" src="./images/mandarina.png" alt=""></div>
 </body>
 </html>
