--- a/views/template/cabecera.ejs
+++ b/views/template/cabecera.ejs
@@ -5,6 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
     <link rel="stylesheet" href="./stylesheets/style.css">
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
 </head>
 <body>
-    
+    <header>
+        <nav class="navigation">
+            <ul class="sidebar">
+                <li><a onclick=hideSidebar() class="logo"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#f3f3f3"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
+                <li><a onclick=hideSidebar() class="button" href="#">Home</a></li>
+                <li><a onclick=hideSidebar() class="button" href="#about">Sobre</a></li>
+                <li><a onclick=hideSidebar() class="button" href="#services">Servicios</a></li>
+                <li><a onclick=hideSidebar() class="button" href="#">Testimonios</a></li>
+                <li><a onclick=hideSidebar() class="button" href="#">Contacto</a></li>
+            </ul>
+            <ul>
+                <li><a class="logo" href="#">RefriExpert ❄️</a></li>
+                <li class="hideOnMobile"><a class="button" href="#">Home</a></li>
+                <li class="hideOnMobile"><a class="button" href="#about">Sobre</a></li>
+                <li class="hideOnMobile"><a class="button" href="#services">Servicios</a></li>
+                <li class="hideOnMobile"><a class="button" href="#">Testimonios</a></li>
+                <li class="hideOnMobile"><a class="button" href="#">Contacto</a></li>
+                <li class="menuButton"><a onclick=showSidebar() class="button"><svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#f3f3f3"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+            </ul>
+        </nav>
+    </header>
