--- a/views/template/cabecera.ejs
+++ b/views/template/cabecera.ejs
@@ -11,7 +11,7 @@
     <header>
         <nav class="navigation">
             <ul class="sidebar">
-                <li><a onclick=hideSidebar() class="logo"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#f3f3f3"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
+                <li><a onclick=hideSidebar() class="logo"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#111621"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
                 <li><a onclick=hideSidebar() class="button" href="#">Home</a></li>
                 <li><a onclick=hideSidebar() class="button" href="#about">Sobre</a></li>
                 <li><a onclick=hideSidebar() class="button" href="#services">Servicios</a></li>
