desaciendo las correcciones

--- a/views/template/cabecera.ejs
+++ b/views/template/cabecera.ejs
@@ -25,7 +25,7 @@
                 <li class="hideOnMobile"><a class="button" href="#services">Servicios</a></li>
                 <li class="hideOnMobile"><a class="button" href="#">Testimonios</a></li>
                 <li class="hideOnMobile"><a class="button" href="#">Contacto</a></li>
-                <li class="menuButton"><a onclick=showSidebar() class="button"><svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#f3f3f3"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+                <li class="menuButton"><a onclick=showSidebar() class="button"><svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#111621"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
             </ul>
         </nav>
     </header>
