--- a/views/template/cabecera.ejs
+++ b/views/template/cabecera.ejs
@@ -15,16 +15,16 @@
                 <li><a onclick=hideSidebar() class="button" href="#">Home</a></li>
                 <li><a onclick=hideSidebar() class="button" href="#about">Sobre</a></li>
                 <li><a onclick=hideSidebar() class="button" href="#services">Servicios</a></li>
-                <li><a onclick=hideSidebar() class="button" href="#">Testimonios</a></li>
-                <li><a onclick=hideSidebar() class="button" href="#">Contacto</a></li>
+                <li><a onclick=hideSidebar() class="button" href="#testimonials">Testimonios</a></li>
+                <li><a onclick=hideSidebar() class="button" href="#contact">Contacto</a></li>
             </ul>
             <ul>
                 <li><a class="logo" href="#">RefriExpert ❄️</a></li>
                 <li class="hideOnMobile"><a class="button" href="#">Home</a></li>
                 <li class="hideOnMobile"><a class="button" href="#about">Sobre</a></li>
                 <li class="hideOnMobile"><a class="button" href="#services">Servicios</a></li>
-                <li class="hideOnMobile"><a class="button" href="#">Testimonios</a></li>
-                <li class="hideOnMobile"><a class="button" href="#">Contacto</a></li>
+                <li class="hideOnMobile"><a class="button" href="#testimonials">Testimonios</a></li>
+                <li class="hideOnMobile"><a class="button" href="#contact">Contacto</a></li>
                 <li class="menuButton"><a onclick=showSidebar() class="button"><svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#f3f3f3"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
             </ul>
         </nav>
