--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -1,3 +1,20 @@
+    <footer class="footer">
+        <ul class="socialIcon">
+            <li><a href="">
+                <ion-icon name="logo-youtube"></ion-icon></a>
+            </li>
+            <li><a href="">
+                <ion-icon name="logo-instagram"></ion-icon></a>
+            </li>
+            <li><a href="">
+                <ion-icon name="logo-whatsapp"></ion-icon></a>
+            </li>
+            <li><a href="">
+                <ion-icon name="logo-facebook"></ion-icon></a>
+            </li>
+        </ul>
+        <p>© 2025 | todos los derechos reservados</p>
+    </footer>
 
     <script>
         function showSidebar(){
@@ -10,5 +27,7 @@
             sidebar.style.display = 'none';
         }
     </script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
