pruebas tecnicas y puliendo detalles

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,15 @@
 <%- include('template/cabecera.ejs') %>
     <main>
-        <div class="home">
+        <section class="home">
 
             <h1> RefriExpert </h1>
             <p>Frescura y confort, 
             <br>en manos expertas!</p>
 
             <a href="#">contactanos</a>
-        </div>
+        </section>
+
+
 
         <section class="about" id="about">
             <div class="gridAbout">
