--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -1,32 +1,23 @@
-    <footer class="footer">
-        <ul class="socialIcon">
-            <li><a href="">
-                <ion-icon name="logo-youtube"></ion-icon></a>
-            </li>
-            <li><a href="">
-                <ion-icon name="logo-instagram"></ion-icon></a>
-            </li>
-            <li><a href="">
-                <ion-icon name="logo-whatsapp"></ion-icon></a>
-            </li>
-            <li><a href="">
-                <ion-icon name="logo-facebook"></ion-icon></a>
-            </li>
-        </ul>
-        <p>© 2025 | todos los derechos reservados</p>
-    </footer>
+        <footer class="footer">
+            <ul class="socialIcon">
+                <li><a href="">
+                    <ion-icon name="logo-youtube"></ion-icon></a>
+                </li>
+                <li><a href="">
+                    <ion-icon name="logo-instagram"></ion-icon></a>
+                </li>
+                <li><a href="">
+                    <ion-icon name="logo-whatsapp"></ion-icon></a>
+                </li>
+                <li><a href="">
+                    <ion-icon name="logo-facebook"></ion-icon></a>
+                </li>
+            </ul>
+            <p>© 2025 | todos los derechos reservados</p>
+        </footer>
+    </div>
 
-    <script>
-        function showSidebar(){
-            const sidebar = document.querySelector('.sidebar');
-            sidebar.style.display = 'flex';
-        }
-
-        function hideSidebar(){
-            const sidebar = document.querySelector('.sidebar');
-            sidebar.style.display = 'none';
-        }
-    </script>
+    <script src="./javascript/main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
