--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,12 +5,18 @@
 }
 
 body{
-    min-height: 100vh;
+    min-height: 100dvh;
     background-color: #f3f3f3;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23002132' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
     color: #111621;
     font-family: Arial, Helvetica, sans-serif;
     overflow-x: hidden;
+}
+
+.container{
+    min-height: 100dvh;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
 }
 
 /*Navegacion*/
@@ -45,7 +51,7 @@ nav .button{
     cursor: pointer;
     width: 100%;
     height: 100%;
-    padding: 0px 30px;
+    padding: 0 min(2.5em, 30px);
     text-decoration: none;
     display: flex;
     align-items: center;
@@ -78,7 +84,7 @@ nav li:first-child{
 }
 
 .sidebar{
-    position: fixed;
+    position: absolute;
     top: 0;
     right: 0;
     height: 100vh;
@@ -87,11 +93,16 @@ nav li:first-child{
     background: #00213240;
     backdrop-filter: blur(10px);
     box-shadow: -10px 0 10px #00000030;
-    display: none;
+    right: -30em;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     transition: all 0.3s;
+    transition: right 0.5s ease-in-out;
+}
+
+.sidebar.show{
+    right: 0;
 }
 
 .sidebar li{
@@ -142,6 +153,8 @@ nav li:first-child{
     border: #111621 solid 2px;
     color: #111621;
 }
+
+/*Ventajas y Beneficios*/
 
 /*Sobre*/
 
