--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,23 @@
             <a href="#">contactanos</a>
         </section>
 
+        <section class="advantagesAndBenefits">
 
+            <div class="gridAAB">
+                <div class="containerAAB">
+                    <h2>Ventajas y Beneficios</h2>
+                    <ol>
+                        <li>Servicio rápido y eficiente para maximizar el rendimiento de tu aire acondicionado.</li>
+                        <li>Diagnósticos precisos realizados por técnicos especializados.</li>
+                        <li>Precios competitivos adaptados a tus necesidades.</li>
+                        <li>Prolonga la vida útil de tus equipos con mantenimiento profesional.</li>
+                        <li>Garantía de satisfacción en cada reparación realizada.</li>
+                    </ol>
+                </div>
+
+                <div class="AABimage"></div>
+            </div>
+        </section>
 
         <section class="about" id="about">
             <div class="gridAbout">
@@ -27,17 +43,17 @@
 
             <div class="servicesGrid">
                 <article>
-                    <img src="./images/img4.jpg" alt="aire acondicionado instalado">
+                    <img height="200" width="300" src="./images/img4.jpg" alt="aire acondicionado instalado">
                     <h3>Instalacion de aires acondicionados</h3>
                     <p> incluye la evaluación previa del espacio para determinar la ubicación más eficiente del equipo, la correcta fijación de las unidades interiores y exteriores, y la conexión de los sistemas eléctricos y de refrigeración según las normativas. </p>
                 </article>
                 <article>
-                        <img src="./images/img6.jpg" alt="diagnostico de aire acondicionado">
-                        <h3>Diagnostico</h3>
-                        <p> Un servicio de diagnóstico de aire acondicionado incluye la inspección detallada del equipo para identificar posibles fallas o problemas en su funcionamiento. Esto abarca la revisión del sistema eléctrico, el circuito de refrigeración, los filtros y las unidades internas y externas.</p>
+                    <img height="200" width="300" src="./images/img6.jpg" alt="diagnostico de aire acondicionado">
+                    <h3>Diagnostico</h3>
+                    <p> Un servicio de diagnóstico de aire acondicionado incluye la inspección detallada del equipo para identificar posibles fallas o problemas en su funcionamiento. Esto abarca la revisión del sistema eléctrico, el circuito de refrigeración, los filtros y las unidades internas y externas.</p>
                 </article>
                 <article>
-                    <img src="./images/img7.jpg" alt="reparación de aire acondicionado">
+                    <img height="200" width="300" src="./images/img7.jpg" alt="reparación de aire acondicionado">
                     <h3>Reparacion</h3>
                     <p> Un servicio de reparación de aire acondicionado incluye la identificación y solución de fallas en el sistema, ya sea en componentes eléctricos, mecánicos o del circuito de refrigeración.</p> <!--Esto abarca la reparación de fugas de gas refrigerante, sustitución de piezas dañadas, limpieza de filtros obstruidos y ajustes necesarios para garantizar un funcionamiento eficiente.-->
                 </article>
