--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -17,7 +17,7 @@
         </footer>
     </div>
 
-    <script src="./javascript/main.js"></script>
+    <script src="./javascript/main.js" defer></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
