--- a/views/template/cabecera.ejs
+++ b/views/template/cabecera.ejs
@@ -6,6 +6,7 @@
     <title><%= title %></title>
     <link rel="stylesheet" href="./stylesheets/style.css">
     <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
+    <link rel="preload" href="./images/img5.jpg" as="image" />
 </head>
 <body>
     <div class="container">
