arreglando un boton

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
             <p>Frescura y confort, 
             <br>en manos expertas!</p>
 
-            <a href="#">contactanos</a>
+            <a href="#contact">contactanos</a>
         </section>
 
         <section class="advantagesAndBenefits">
