--- a/views/template/cabecera.ejs
+++ b/views/template/cabecera.ejs
@@ -15,7 +15,7 @@
 
             <nav id="navBar" class="navigation">
                 <ul>
-                    <li><a class="logo" href="/">RefriExpert ❄️</a></li>
+                    <li><a class="logo" href="#">RefriExpert ❄️</a></li>
                     <li><a onclick=hidenavBar() id="closenavBar" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#f3f3f3"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
                     <li><a onclick=hidenavBar() class="button" href="#">Home</a></li>
                     <li><a onclick=hidenavBar() class="button" href="#about">Sobre</a></li>
