arreglando un bug del navbar

--- a/views/template/cabecera.ejs
+++ b/views/template/cabecera.ejs
@@ -17,11 +17,11 @@
                 <ul>
                     <li><a class="logo" href="#">RefriExpert ❄️</a></li>
                     <li><a onclick=hidenavBar() id="closenavBar" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#f3f3f3"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-                    <li><a onclick=hidenavBar() class="button" href="#">Home</a></li>
-                    <li><a onclick=hidenavBar() class="button" href="#about">Sobre</a></li>
-                    <li><a onclick=hidenavBar() class="button" href="#services">Servicios</a></li>
-                    <li><a onclick=hidenavBar() class="button" href="#testimonials">Testimonios</a></li>
-                    <li><a onclick=hidenavBar() class="button" href="#contact">Contacto</a></li>
+                    <li><a class="button" href="#">Home</a></li>
+                    <li><a class="button" href="#about">Sobre</a></li>
+                    <li><a class="button" href="#services">Servicios</a></li>
+                    <li><a class="button" href="#testimonials">Testimonios</a></li>
+                    <li><a class="button" href="#contact">Contacto</a></li>
                     <li class="menuButton"></li>
                 </ul>
             </nav>
