--- a/views/index.ejs
+++ b/views/index.ejs
@@ -105,12 +105,12 @@
                 </div>
 
                 <div class="contactForm">
-                    <form>
-                        <input class="campo" type="text" id="nombre" name="nombre" placeholder="Nombre">
+                    <form action="/send" method="post">
+                        <input required class="campo" type="text" id="nombre" name="nombre" placeholder="Nombre">
 
-                        <input class="campo" type="email" id="email" name="email" placeholder="Correo">
+                        <input required class="campo" type="email" id="email" name="email" placeholder="Correo">
 
-                        <input class="campo" type="tel" id="telefono" name="telefono" placeholder="Teléfono">
+                        <input required class="campo" type="tel" id="telefono" name="telefono" placeholder="Teléfono">
 
                         <textarea class="campo" name="message" id="message" placeholder="Mensaje"></textarea>
 
