--- a/views/index.ejs
+++ b/views/index.ejs
@@ -106,11 +106,11 @@
 
                 <div class="contactForm">
                     <form action="/send" method="post">
-                        <input required class="campo" type="text" id="nombre" name="nombre" placeholder="Nombre">
+                        <input required class="campo" type="text" id="name" name="name" placeholder="Nombre">
 
                         <input required class="campo" type="email" id="email" name="email" placeholder="Correo">
 
-                        <input required class="campo" type="tel" id="telefono" name="telefono" placeholder="Teléfono">
+                        <input required class="campo" type="tel" id="phone" name="phone" placeholder="Teléfono">
 
                         <textarea class="campo" name="message" id="message" placeholder="Mensaje"></textarea>
 
