--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,8 +6,7 @@
 
 body{
     min-height: 100dvh;
-    background-color: #f3f3f3;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23002132' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    background: #e8fffc;
     color: #111621;
     font-family: Arial, Helvetica, sans-serif;
     overflow-x: hidden;
@@ -24,6 +23,7 @@ body{
 header{
     position: sticky;
     top: 0;
+    z-index: 2;
 }
 
 nav{
@@ -235,6 +235,10 @@ nav li:first-child{
 
 /*Servicios*/
 
+.servicesGrid a{
+    text-decoration: none;
+}
+
 .services{
     scroll-margin-top: 3rem;
     min-height: 100dvh;
@@ -338,7 +342,6 @@ nav li:first-child{
 /*Contacto*/
 
 .contact{
-    background: #e8fffc;
     scroll-margin-top: 3rem;
     min-height: 100dvh;
     display: flex;
@@ -478,6 +481,183 @@ nav li:first-child{
     font-size: 1.3rem;
 }
 
+/*admin views*/
+
+.adminPanel{
+    width: 100%;
+    min-height: 100dvh;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap : 1lh;
+    font-weight: 600;
+    background: #e8fffc;
+}
+
+.adminTitle{
+    margin: 3rem 0;
+    border-bottom: #111621 solid 3px;
+}
+
+table, th, td {
+    border: 2px solid #002132;
+    border-collapse: collapse;
+    padding: 0.5rem;
+    text-align: center;
+}
+
+.adminTable{
+    margin: 2rem 0;
+    overflow: hidden;
+}
+
+/*payment*/
+
+.payment{
+    background-color: #8ED2FF;
+    max-width: 360px;
+    margin: 80px auto;
+    height: auto;
+    padding: 2rem;
+    padding-top: 3.5rem;
+    border-radius: 5px;
+    position: relative;
+}
+
+.payment h2{
+    text-align: center;
+    letter-spacing: 2px;
+    margin-bottom: 2.5rem;
+    color: #111621;
+}
+
+.form label{
+    display: block;
+    color: #111621;
+    margin-bottom: 6px;
+}
+
+.form input{
+    width: 100%;
+    padding: 13px 0 13px 25px;
+    text-align: center;
+    border: 2px solid #6CB0DD;
+    border-radius: 5px;
+    letter-spacing: 1px;
+    word-wrap: 3px;
+    outline: none;
+    font-size: 1rem;
+    color: #111621;
+}
+
+.card_grp{
+    display: flex;
+    justify-content: space-between;
+}
+
+.cardItem{
+    width: 48%;
+}
+
+.space{
+    margin-bottom: 1.3rem;
+}
+
+.iconRelative{
+    position: relative;
+}
+
+.iconRelative ion-icon{
+    position: absolute;
+    font-size: 1.5rem;
+    bottom: 13px;
+    left: 10px;
+    color: #111621;
+}
+
+.btn{
+    background: #002132;
+    color: #f3f3f3;
+    padding: 1rem;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    font-size: 1.2rem;
+    width: 100%;
+    margin-top: 1rem;
+}
+
+.btn:hover{
+    background: #002132EE;
+}
+
+.card_grp select{
+    padding: 0.8rem;
+    text-align: center;
+    border: 2px solid #6CB0DD;
+    border-radius: 5px;
+    letter-spacing: 1px;
+    word-wrap: 3px;
+    outline: none;
+    font-size: 1rem;
+    color: #111621;
+}
+
+/*payment succes*/
+
+.paymentSuccess {
+    background: #e8fffc;
+    min-height: 100vh;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0 max(2rem, 10%);
+}
+
+.paymentSuccess p {
+    margin-top: 1lh;
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #111621;
+}
+
+.paymentSuccess img{
+    max-width: 100%;
+    height: auto;
+    aspect-ratio: 9 / 9;
+    object-fit: cover;
+}
+
+/*Succes contact add*/
+
+.success {
+    background: #e8fffc;
+    min-height: 100vh;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0 max(2rem, 10%);
+}
+
+.success p {
+    margin-top: 1lh;
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #111621;
+}
+
+.success img{
+    max-width: 100%;
+    height: auto;
+    aspect-ratio: 9 / 9;
+    object-fit: cover;
+}
+
 /*mediaQuerys*/
 
 @media (max-width: 700px) {
@@ -512,6 +692,11 @@ nav li:first-child{
     }
     nav li:first-child{
         display: none;
+    }
+    .payment{
+        min-height: 100vh;
+        width: 100%;
+        margin: 0 auto;
     }
 }
 
