--- a/views/template/cabecera.ejs
+++ b/views/template/cabecera.ejs
@@ -6,7 +6,7 @@
     <title><%= title %></title>
     <link rel="stylesheet" href="./stylesheets/style.css">
     <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
-    <link rel="preload" href="./images/img5.jpg" as="image" />
+    
 </head>
 <body>
     <div class="container">
@@ -15,13 +15,13 @@
 
             <nav id="navBar" class="navigation">
                 <ul>
-                    <li><a class="logo" href="#">RefriExpert ❄️</a></li>
+                    <li><a class="logo" href="/#">RefriExpert ❄️</a></li>
                     <li><a onclick=hidenavBar() id="closenavBar" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#f3f3f3"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-                    <li><a class="button" href="#">Home</a></li>
-                    <li><a class="button" href="#about">Sobre</a></li>
-                    <li><a class="button" href="#services">Servicios</a></li>
-                    <li><a class="button" href="#testimonials">Testimonios</a></li>
-                    <li><a class="button" href="#contact">Contacto</a></li>
+                    <li><a class="button" href="/#">Home</a></li>
+                    <li><a class="button" href="/#about">Sobre</a></li>
+                    <li><a class="button" href="/#services">Servicios</a></li>
+                    <li><a class="button" href="/#testimonials">Testimonios</a></li>
+                    <li><a class="button" href="/#contact">Contacto</a></li>
                     <li class="menuButton"></li>
                 </ul>
             </nav>
