--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
             <div class="servicesGrid">
                 <a href="/payment">
                     <article>
-                        <img height="200" width="300" src="./images/img4.jpg" alt="aire acondicionado instalado">
+                        <img loading="lazy" height="200" width="300" src="./images/img4.jpg" alt="aire acondicionado instalado">
                         <h3>Instalacion de aires acondicionados</h3>
                         <p> incluye la evaluación previa del espacio para determinar la ubicación más eficiente del equipo, la correcta fijación de las unidades interiores y exteriores, y la conexión de los sistemas eléctricos y de refrigeración según las normativas. </p>
                     </article>
@@ -53,7 +53,7 @@
                 
                 <a href="/payment">
                     <article>
-                        <img height="200" width="300" src="./images/img6.jpg" alt="diagnostico de aire acondicionado">
+                        <img loading="lazy" height="200" width="300" src="./images/img6.jpg" alt="diagnostico de aire acondicionado">
                         <h3>Diagnostico</h3>
                         <p> Un servicio de diagnóstico de aire acondicionado incluye la inspección detallada del equipo para identificar posibles fallas o problemas en su funcionamiento. Esto abarca la revisión del sistema eléctrico, el circuito de refrigeración, los filtros y las unidades internas y externas.</p>
                     </article>
@@ -61,7 +61,7 @@
 
                 <a href="/payment">
                     <article>
-                        <img height="200" width="300" src="./images/img7.jpg" alt="reparación de aire acondicionado">
+                        <img loading="lazy" height="200" width="300" src="./images/img7.jpg" alt="reparación de aire acondicionado">
                         <h3>Reparacion</h3>
                         <p> Un servicio de reparación de aire acondicionado incluye la identificación y solución de fallas en el sistema, ya sea en componentes eléctricos, mecánicos o del circuito de refrigeración.</p> <!--Esto abarca la reparación de fugas de gas refrigerante, sustitución de piezas dañadas, limpieza de filtros obstruidos y ajustes necesarios para garantizar un funcionamiento eficiente.-->
                     </article>
