--- a/views/success.ejs
+++ b/views/success.ejs
@@ -2,7 +2,7 @@
 
     <main>
         <div class="success">
-            <img height="200" width="200" src="./images/img8.png" alt="carita feliz">
+            <img loading="lazy" height="200" width="200" src="./images/img8.png" alt="carita feliz">
             <p>Gracias por llenar el formulario!</p>
             <p>Nos comunicaremos con usted en la brevedad posible.</p>
         </div>
