--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -38,6 +38,12 @@
                     <% }) %>
                 
             </table>
+
+            <div class="adminButtons">
+                <button class="adminButton" id="deleteAll" onclick="deleteAll()">
+                    Delete All
+                </button>
+            </div>
         </div>
     </main>
 <%- include('template/footer.ejs') %>
