--- a/views/paymentSuccess.ejs
+++ b/views/paymentSuccess.ejs
@@ -2,7 +2,7 @@
 
     <main>
         <div class="paymentSuccess">
-            <img height="200" width="200" src="./images/img8.png" alt="carita feliz">
+            <img loading="lazy" height="200" width="200" src="./images/img8.png" alt="carita feliz">
             <p>Gracias por el pago!</p>
             <p>Procesaremos su servicio en la brevedad posible.</p>
         </div>
