--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -451,50 +451,6 @@ nav li:first-child{
 }
 
 
-/*footer*/
-
-.footer{
-    position: relative;
-    width: 100%;
-    min-height: 8.8rem;
-    background: #002132;
-    padding: 1.3rem 3.5rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.footer ul{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0.7rem 0.3rem;
-    flex-wrap: wrap;
-}
-
-.footer li{
-    list-style: none;
-}
-
-.footer a{
-    color: #f3f3f3;
-    font-size: 2rem;
-    display: inline-block;
-    margin: 0 0.7rem;
-    transition: all 0.3s;
-}
-
-.footer a:hover{
-    transform: translateY(-0.7rem);
-}
-
-.footer p{
-    color: #f3f3f3;
-    text-align: center;
-    margin: 1rem 0;
-    font-size: 1.3rem;
-}
 
 /*admin views*/
 
@@ -526,6 +482,21 @@ table, th, td {
     max-width: 80%;
     margin: 2rem 0;
     overflow: hidden;
+}
+
+.btn-danger{
+    background: #111621;
+    color: #f3f3f3;
+    padding: 1rem;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    font-size: 1.2rem;
+    width: 100%;
+}
+
+.btn-danger:hover{
+    background: #111621EE;
 }
 
 /*payment*/
@@ -672,6 +643,51 @@ table, th, td {
     height: auto;
     aspect-ratio: 9 / 9;
     object-fit: cover;
+}
+
+/*footer*/
+
+.footer{
+    position: relative;
+    width: 100%;
+    min-height: 8.8rem;
+    background: #002132;
+    padding: 1.3rem 3.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0.7rem 0.3rem;
+    flex-wrap: wrap;
+}
+
+.footer li{
+    list-style: none;
+}
+
+.footer a{
+    color: #f3f3f3;
+    font-size: 2rem;
+    display: inline-block;
+    margin: 0 0.7rem;
+    transition: all 0.3s;
+}
+
+.footer a:hover{
+    transform: translateY(-0.7rem);
+}
+
+.footer p{
+    color: #f3f3f3;
+    text-align: center;
+    margin: 1rem 0;
+    font-size: 1.3rem;
 }
 
 /*mediaQuerys*/
