--- a/views/template/cabecera.ejs
+++ b/views/template/cabecera.ejs
@@ -8,14 +8,14 @@
     <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
     
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W3WJTNWF75"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-W3WJTNWF75');
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-W3WJTNWF75');
     </script>
+<!-- End Google Analytics -->
 
 </head>
 <body>
