google analytics 3er intento

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -156,9 +156,9 @@
                     </form>
                     <script>
                     document.getElementById('form').addEventListener('submit', function() {
-                        gtag('event', 'submit', {
-                            'event_category': 'Formulario',
-                            'event_label': 'Contacto'
+                        gtag('event', 'form_submit', {
+                            'event_category': 'formulario',
+                            'event_label': 'contacto'
                         });
                     });
                     </script>
