--- a/views/template/cabecera.ejs
+++ b/views/template/cabecera.ejs
@@ -15,7 +15,8 @@
         gtag('js', new Date());
         gtag('config', 'G-W3WJTNWF75');
     </script>
-<!-- End Google Analytics -->
+    <!-- End Google Analytics -->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
 </head>
 <body>
