--- a/views/template/cabecera.ejs
+++ b/views/template/cabecera.ejs
@@ -22,17 +22,31 @@
 <body>
     <div class="container">
         <header>
-            <button onclick=shownavBar() class="openButton" id="openButton"><svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#f3f3f3"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></button>
+            <button onclick=shownavBar() class="openButton" id="openButton"><svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="http://www.w3.org/2000/svg" width="30px" fill="#f3f3f3"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></button>
 
             <nav id="navBar" class="navigation">
                 <ul>
                     <li><a class="logo" href="/#">RefriExpert ❄️</a></li>
-                    <li><a onclick=hidenavBar() id="closenavBar" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#f3f3f3"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
+                    <li><a onclick=hidenavBar() id="closenavBar" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="http://www.w3.org/2000/svg" width="24px" fill="#f3f3f3"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
                     <li><a class="button" href="/#">Home</a></li>
                     <li><a class="button" href="/#about">Sobre</a></li>
                     <li><a class="button" href="/#services">Servicios</a></li>
                     <li><a class="button" href="/#testimonials">Testimonios</a></li>
                     <li><a class="button" href="/#contact">Contacto</a></li>
+                    <li>
+                        <% if (typeof isLoggedIn !== 'undefined' && isLoggedIn) { %>
+                            <a class="button" href="/logout">Cerrar sesion</a>
+                        <% } else { %>
+                            <a class="button" href="/login">Iniciar Sesion</a>
+                        <% } %>
+                    </li>
+                    <% if (typeof isAdmin !== 'undefined' && isAdmin) { %>
+                        <li>
+                            <a href="/admin" class="button">
+                                <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-address-book"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M20 6v12a2 2 0 0 1 -2 2h-10a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h10a2 2 0 0 1 2 2z" /><path d="M10 16h6" /><path d="M13 11m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" /><path d="M4 8h3" /><path d="M4 12h3" /><path d="M4 16h3" /></svg>
+                            </a>
+                        </li>
+                    <% } %>
                     <li class="menuButton"></li>
                 </ul>
             </nav>
